--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@solana/wallet-adapter-wallets": "^0.14.2",
     "@solana/web3.js": "^1.31.0",
     "@tailwindcss/typography": "^0.5.0",
+    "aptos": "^1.3.13",
     "daisyui": "^1.24.3",
     "immer": "^9.0.12",
     "next": "12.0.8",
